spt: change core/column to flex-direction: row; to fix weird safari overlapping issues in iframe preview

--- a/apps/full-site-editing/full-site-editing-plugin/starter-page-templates/page-template-modal/styles/starter-page-templates-editor.scss
+++ b/apps/full-site-editing/full-site-editing-plugin/starter-page-templates/page-template-modal/styles/starter-page-templates-editor.scss
@@ -481,7 +481,7 @@ body.admin-bar:not( .is-fullscreen-mode ) .page-template-modal-screen-overlay {
 	}
 
 	// flex: 1; and flex-direction: column; in Safari causes a lot of weird overlapping layout issues in the iframe preview: https://github.com/Automattic/wp-calypso/issues/39874
-	.wp-block-columns > .block-editor-inner-blocks > .block-editor-block-list__layout > [data-type="core/column"] {
+	.wp-block-columns > .block-editor-inner-blocks > .block-editor-block-list__layout > [data-type='core/column'] {
         flex-direction: row;
     }
 }
